# website

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py
app/blueprints/admin/: routes.py
app/blueprints/api/: __init__.py  routes.py
app/blueprints/ear/: __init__.py  routes.py
app/blueprints/public/: .gitignore  __init__.py  routes.py
app/data/: .gitignore  portfolio.json
app/ear/: __init__.py  engine.py
app/portfolio/: __init__.py  store.py
app/site_settings/: .gitignore  __init__.py  store.py
app/static/css/: base.css  components.css  site.css  theme.css  utilities.css
app/static/css/pages/: admin.css  blog.css  contact.css  ear.css  game.css  home.css  portfolio.css
app/static/js/: base.js  contact.js  ear.js  leaderboard.js
app/static/zaychess/: .gitignore
app/templates/: _nav.html  base.html  blog.html  blog_list.html  blog_post.html  contact.html  ear.html  eqoscan.html  game.html  home.html  index.html  presentations.html  zaychess.html  zaychess_privacy.html  zaychess_support.html
app/templates/admin/: _flash.html  login.html  portfolio_form.html  portfolio_list.html  site_settings.html
app/templates/sections/: _contact.html  _home.html  _portfolio.html
ear_data/: .gitignore  README.md
projects/ear/: .gitignore  service.py
projects/ear/docu/: MODEL_OVERVIEW.md  UPDATES.md
projects/ear/templates/: ce_loss.html  index.html
