[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = ""
authors = ["Jerenemy <jzay@wesleyan.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
flask = ">=3.1.2,<4.0.0"
flask-mail = ">=0.10.0,<0.11.0"
python-dotenv = ">=1.1.1,<2.0.0"
pillow = ">=12.0.0,<13.0.0"
soundfile = ">=0.12.0"

# Note the "+cpu" added to the version strings here
torch = {version = "2.9.1", source = "pytorch-cpu"}
torchvision = {version = "0.24.1+cpu", source = "pytorch-cpu"}
torchaudio = {version = "2.9.1", source = "pytorch-cpu"}
gunicorn = "^23.0.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
